# AquaSweep

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py  water_ws_interface_guide.md  water_ws_planner_controller.md
aqua_detection_backup/: setup.py
cleaner_msgs/: CMakeLists.txt  package.xml
cleaner_msgs/msg/: Detection.msg
docs/: ROS2 Communication Guide 367f3b5807d480ffb41ad03b647ad3f3.md  ROS2 Communication Guide.md  circular_rail_cobot_research.md  controller_isaac_architecture.md  dashboard_planner_dev_guide.md  fish_detection_model_guide.me  integration_test_guide.md  rail_robot_ros2_architecture.md  recent_updates.md  tech_notes.md  troubleshooting.md  water_ws_refactoring.md  wheel_ground_contact.md  work_log.md
ros2_nodes/: perception_node.py
scripts/: ISAAC_Z_COMPARE_QUICKSTART.md  add_aquasweep_attrs.py  check_pool_floor_z.py  check_spawn_z.py  check_wheel_collision_api.py  check_wheel_floor_contact.py  check_wheel_transform_detail.py  compare_z_run_scenario.py  debug_cmd_vel.py  integrated_viewer.py  test_direct_wheel_control.py  test_floor_collision.py  test_wheel_diagnosis.py
water_debris_env/: build_debris.py  camera.usd  camera_system.py  debris_system.py  local_test.py  package.xml  setup.cfg  setup.py
water_robot/: package.xml  (+2 more)
water_ws/build_isaac/aqua_interfaces/rosidl_generator_rs/aqua_interfaces/rust/: Cargo.toml
water_ws/build_isaac/aqua_interfaces/rosidl_generator_rs/aqua_interfaces/rust/src/: action.rs  lib.rs  msg.rs
water_ws/build_isaac/aqua_interfaces/rosidl_generator_rs/aqua_interfaces/rust/src/msg/: rmw.rs
(+486 files in other folders)
