[package]
name = "aqua_interfaces"
version = "0.0.0"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.6"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# ROS Dependencies
unique_identifier_msgs = "*"
builtin_interfaces = "*"
action_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'unique_identifier_msgs/serde', 'builtin_interfaces/serde', 'action_msgs/serde']

[package.metadata.rclrs]
reexport = true
